--- a/index.html
+++ b/index.html
@@ -8,22 +8,11 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
 </head>
 <body>
-    <nav>
-        <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="about.html">About</a></li>
-            <li><a href="contact.html">Contact</a></li>
-        </ul>
-        </nav>
-    <header>
-        <h1>MUSIFY</h1>
-    </header>
-    
-    <main>
-        <p>Pick any music</p>
-    </main>
-    <footer>
-        <p>&copy; MUSIFY</p>
-    </footer>
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
 </body>
 </html>
